src/objects/ffr__ReportingFilterMapping__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingfilter</customHelpPage>
    <fields>
        <fullName>ffr__QualifiedKey__c</fullName>
        <formula>TRIM(TEXT(ffr__Type__c) + &apos; &apos; + TEXT(ffr__TemplateKey__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type / Template Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingDataRange__c</fullName>
        <label>Reporting Data Range</label>
        <referenceTo>ffr__ReportingDataRange__c</referenceTo>
        <relationshipLabel>Reporting Filters Mapping</relationshipLabel>
        <relationshipName>ReportingFiltersMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Filter</label>
        <referenceTo>ffr__ReportingFilter__c</referenceTo>
        <relationshipLabel>Reporting Filters Mapping</relationshipLabel>
        <relationshipName>ReportingFiltersMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <picklist>
            <controllingField>ffr__Type__c</controllingField>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reporting Filter Mapping</label>
    <nameField>
        <label>Reporting Filter Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Filters Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>